test/errors/error8.base
Invalid statement. All statements should be in the forms: "a = b;" or "_ = b();" 
fun foo() {
   bar();
      ^
